# ccapi

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
ccapi/: __init__.py  __version__.py  ccapi.py  ccapisession.py  dosearch.py  exceptions.py  urls.py
ccapi/cc_objects/: __init__.py  courierrule.py  factory.py  multipack_info.py  product.py  productexport.py  productimage.py  productoptions.py  productrange.py  saleschannel.py  warehouse.py
ccapi/inventoryitems/: __init__.py  courierrule.py  factory.py  location.py  product.py  productimage.py  productoptions.py  productrange.py  vatrates.py  warehouse.py
ccapi/requests/: __init__.py  addcustomer.py  addnewrange.py  addoptionvalue.py  addproduct.py  addremproductoption.py  apirequest.py  ccapisession.py  createorder.py  customer.py  dosearch.py  findproductselectedoptionsonly.py  getimages.py  getoptiondata.py  getoptions.py  getproductdata.py  getproductsforrange.py  preemployee.py  productoperations.py  updateproductstocklevel.py
tests/: __init__.py  test_CCAPI.py  test_login.py
tests/test_CCAPI_class/: __init__.py  test_CCAPI_class.py  test_ccapi_methods.py
tests/test_cc_objects/: __init__.py  test_cc_objects.py  test_exports.py  test_multipack_info.py  test_product.py
tests/test_data/: __init__.py  check_ranges_on_sales_channel_test_data.py  find_product_selected_options_only_test_data.py  get_products_for_range_response.py  (+3 more)
(+99 files in other folders)
