[tool.poetry]
name = "ccapi"
version = "0.1.0"
description = "API integration for Cloud Commerce Pro."
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
requests-mock = "^1.7.0"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
black = "^19.10b0"
coveralls = "^1.11.1"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
