[tool.poetry]
name = "ccapi"
version = "0.1.0"
description = "API integration for Cloud Commerce Pro."
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.8.2"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.1"
coveralls = "^3.3.1"
isort = "^5.10.1"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
